with the lightbox now almost bug free we can stretch it a bit more to get more room for the picture in the frame, no dummy spaces around anymore

--- a/resources/lightbox.css
+++ b/resources/lightbox.css
@@ -85,7 +85,7 @@ only screen and (max-device-width : 320px) {
 	padding: 0px;
 	margin: 0px;
 	width: 100%;
-	height: 90%;
+	height: 100%;
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
